deploy/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: budgeit-backend
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app: budgeit-backend
spec:
  selector:
    app: budgeit-backend
  ports:
    - name: http
      port: 8080
      targetPort: http
