deploy/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: budgeit-frontend
  labels:
    app: budgeit-frontend
spec:
  selector:
    app: budgeit-frontend
  ports:
    - name: http
      port: 8080
      targetPort: http
