deploy/base/frontend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: budgeit
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app: budgeit-frontend
spec:
  to:
    kind: Service
    name: budgeit-frontend
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
